--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "genshin-pity-converter",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://batimius.github.io/GenshinPityConverter/",
+  "author": {"name": "Batimius", "email": "batimius@gmail.com"},
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,7 +23,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+	"predeploy": "npm run build",
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
